// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`View Filter Group creation should fail when parentViewFilterGroupId does not exist 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "viewFilterGroup": [
        {
          "errors": [
            {
              "code": "VIEW_FILTER_GROUP_NOT_FOUND",
              "message": "Parent view filter group not found",
              "userFriendlyMessage": "Parent view filter group not found",
            },
          ],
          "flatEntityMinimalInformation": {
            "id": Any<String>,
            "universalIdentifier": Any<String>,
          },
          "metadataName": "viewFilterGroup",
          "status": "fail",
          "type": "create",
        },
      ],
    },
    "message": "Validation failed for 1 viewFilterGroup",
    "summary": {
      "totalErrors": 1,
      "viewFilterGroup": 1,
    },
    "userFriendlyMessage": "Metadata validation failed",
  },
  "message": "Multiple validation errors occurred while creating view filter group",
  "name": "GraphQLError",
}
`;

exports[`View Filter Group creation should fail when parentViewFilterGroupId equals id (self-reference) 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "viewFilterGroup": [
        {
          "errors": [
            {
              "code": "CIRCULAR_DEPENDENCY",
              "message": "View filter group cannot be its own parent",
              "userFriendlyMessage": "View filter group cannot be its own parent",
            },
            {
              "code": "VIEW_FILTER_GROUP_NOT_FOUND",
              "message": "Parent view filter group not found",
              "userFriendlyMessage": "Parent view filter group not found",
            },
          ],
          "flatEntityMinimalInformation": {
            "id": Any<String>,
            "universalIdentifier": Any<String>,
          },
          "metadataName": "viewFilterGroup",
          "status": "fail",
          "type": "create",
        },
      ],
    },
    "message": "Validation failed for 1 viewFilterGroup",
    "summary": {
      "totalErrors": 1,
      "viewFilterGroup": 1,
    },
    "userFriendlyMessage": "Metadata validation failed",
  },
  "message": "Multiple validation errors occurred while creating view filter group",
  "name": "GraphQLError",
}
`;

exports[`View Filter Group creation should fail when viewId does not exist 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "viewFilterGroup": [
        {
          "errors": [
            {
              "code": "VIEW_NOT_FOUND",
              "message": "View not found",
              "userFriendlyMessage": "View not found",
            },
          ],
          "flatEntityMinimalInformation": {
            "id": Any<String>,
            "universalIdentifier": Any<String>,
          },
          "metadataName": "viewFilterGroup",
          "status": "fail",
          "type": "create",
        },
      ],
    },
    "message": "Validation failed for 1 viewFilterGroup",
    "summary": {
      "totalErrors": 1,
      "viewFilterGroup": 1,
    },
    "userFriendlyMessage": "Metadata validation failed",
  },
  "message": "Multiple validation errors occurred while creating view filter group",
  "name": "GraphQLError",
}
`;

exports[`View Filter Group creation should fail when viewId is not a valid UUID 1`] = `
{
  "extensions": {
    "code": "GRAPHQL_VALIDATION_FAILED",
    "http": {
      "status": 400,
    },
    "userFriendlyMessage": "An error occurred.",
    "value": "invalid-uuid",
  },
  "message": "Invalid UUID",
  "name": "ValidationError",
}
`;
